<resources>
    <string name="app_name">Habit Tracker</string>
    <string name="name_field_label">Название</string>
    <string name="description_field_label">Описание</string>
    <string name="priorities_spinner_label">Приоритет</string>
    <string name="type_good">хорошая</string>
    <string name="goods">хорошие</string>
    <string name="type_bad">плохая</string>
    <string name="bads">плохие</string>
    <string name="type_radio_group_label">Тип привычки</string>
    <string name="habit_count_hint">Число повторений привычки</string>
    <string name="habit_frequency_hint">Частота повторений в днях</string>
    <string name="add_button_label">Добавить</string>
    <string name="habit_editor_repeat">Повторять</string>
    <string name="habit_editor_times_in">раз в</string>
    <string name="habit_editor_days">дней</string>
    <string name="home_screen_name">Домашний экран</string>
    <string name="info_screen_name">Информация</string>
    <string name="info">Трекер привычек</string>
    <string name="field_is_empty">Поле должно быть заполнено</string>
    <string name="type_is_not_chosen">Тип должен быть выбран</string>
    <string name="habitRepetition">%1$s в %2$s</string>
    <string name="high_priority">высокий</string>
    <string name="medium_priority">средний</string>
    <string name="low_priority">низкий</string>
    <string name="bottom_sheet_header">Фильтры и сортировки</string>
    <string name="sort_by_priority">Сортировать по приоритету</string>
    <string name="search_field_hint">Поиск</string>
    <plurals name="timesPlurals">
        <item quantity="few">%1$d раза</item>
        <item quantity="other">%1$d раз</item>
    </plurals>
    <plurals name="daysPlurals">
        <item quantity="one">%1$d день</item>
        <item quantity="few">%1$d дня</item>
        <item quantity="other">%1$d дней</item>
    </plurals>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="save_to_cloud_label">сохранить в облако</string>
    <string name="load_from_cloud_label">загрузить из облака</string>
    <string name="cloud_screen_name">Импорт и экспорт</string>
    <string name="token">06997801-d80d-4b9b-8dcf-5b3790bb31b7</string>
</resources>
