<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/topGuideline"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.05" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/leftGuideline"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.05" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/rightGuideline"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.95" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/nameTextFieldLayout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/name_field_label"
            app:layout_constraintLeft_toLeftOf="@id/leftGuideline"
            app:layout_constraintRight_toRightOf="@id/rightGuideline"
            app:layout_constraintTop_toTopOf="@id/topGuideline">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/nameTextField"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/descriptionTextFieldLayout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/habit_editor_field_top_margin"
            android:hint="@string/description_field_label"
            app:layout_constraintLeft_toLeftOf="@id/leftGuideline"
            app:layout_constraintRight_toRightOf="@id/rightGuideline"
            app:layout_constraintTop_toBottomOf="@id/nameTextFieldLayout">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/descriptionTextField"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/prioritiesSpinnerLabel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/habit_editor_field_top_margin"
            android:text="@string/priorities_spinner_label"
            android:textSize="@dimen/habit_editor_label_font_size"
            app:layout_constraintLeft_toLeftOf="@id/leftGuideline"
            app:layout_constraintRight_toRightOf="@id/rightGuideline"
            app:layout_constraintTop_toBottomOf="@id/descriptionTextFieldLayout" />

        <Spinner
            android:id="@+id/prioritiesSpinner"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintLeft_toLeftOf="@id/leftGuideline"
            app:layout_constraintRight_toRightOf="@id/rightGuideline"
            app:layout_constraintTop_toBottomOf="@id/prioritiesSpinnerLabel" />

        <RadioGroup
            android:id="@+id/typeRadioGroup"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/habit_editor_field_top_margin"
            android:orientation="vertical"
            app:layout_constraintLeft_toLeftOf="@id/leftGuideline"
            app:layout_constraintRight_toRightOf="@id/rightGuideline"
            app:layout_constraintTop_toBottomOf="@id/prioritiesSpinner">

            <TextView
                android:id="@+id/typeRadioGroupLabel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/type_radio_group_label"
                android:textSize="@dimen/habit_editor_label_font_size" />

            <RadioButton
                android:id="@+id/typeGoodRadioButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/type_good" />

            <RadioButton
                android:id="@+id/typeBadRadioButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/type_bad" />
        </RadioGroup>

        <LinearLayout
            android:id="@+id/frequencyLayout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintLeft_toLeftOf="@id/leftGuideline"
            app:layout_constraintRight_toRightOf="@id/rightGuideline"
            app:layout_constraintTop_toBottomOf="@id/typeRadioGroup">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/habit_editor_repeat"
                android:textSize="@dimen/habit_editor_label_font_size" />

            <EditText
                android:id="@+id/habitCountTextField"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="number" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/habit_editor_times_in"
                android:textSize="@dimen/habit_editor_label_font_size" />

            <EditText
                android:id="@+id/habitFrequencyTextField"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="number" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/habit_editor_days"
                android:textSize="@dimen/habit_editor_label_font_size" />


        </LinearLayout>

        <Button
            android:id="@+id/addButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add_button_label"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="@id/leftGuideline"
            app:layout_constraintRight_toRightOf="@id/rightGuideline"
            app:layout_constraintTop_toBottomOf="@id/frequencyLayout" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>