<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="@dimen/bottom_sheet_item_height"
        android:background="@color/colorPrimaryDark"
        android:gravity="center_vertical"
        android:padding="@dimen/bottom_sheet_item_padding"
        android:text="@string/bottom_sheet_header"
        android:textColor="@color/white"
        android:textSize="20sp" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/bottom_sheet_item_height">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:padding="@dimen/bottom_sheet_item_padding"
            android:text="@string/sort_by_priority"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="parent" />

        <com.google.android.material.button.MaterialButtonToggleGroup
            android:id="@+id/buttonToggleGroup"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:padding="@dimen/bottom_sheet_item_padding"
            app:layout_constraintEnd_toEndOf="parent"
            app:singleSelection="true">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/buttonSortUp"
                style="@style/Widget.App.Button.OutlinedButton.IconOnly"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:icon="@drawable/ic_arrow_upward" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/buttonSortDown"
                style="@style/Widget.App.Button.OutlinedButton.IconOnly"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:icon="@drawable/ic_arrow_downward" />

        </com.google.android.material.button.MaterialButtonToggleGroup>

    </androidx.constraintlayout.widget.ConstraintLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/nameTextFieldLayout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="@dimen/bottom_sheet_item_height"
        android:hint="@string/search_field_hint"
        android:paddingStart="@dimen/bottom_sheet_item_padding"
        android:paddingEnd="@dimen/bottom_sheet_item_padding">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/searchTextField"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </com.google.android.material.textfield.TextInputLayout>

</LinearLayout>
